# PointBlank-C-

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TCPConnection.py  TCPServer.py
PointBlank.Auth/: AuthClient.cpp  AuthClient.hpp  AuthManager.cpp  AuthManager.hpp  CMakeLists.txt  Main.cpp
PointBlank.Auth/Data/: ChannelsInfo.cpp  ChannelsInfo.hpp
PointBlank.Auth/Data/Configs/: AuthConfig.cpp  AuthConfig.hpp
PointBlank.Auth/Data/Managers/: AccountManager.cpp  AccountManager.hpp
PointBlank.Auth/Data/Model/: Account.cpp  Account.hpp
PointBlank.Auth/Network/ClientPacket/: ClientPackets.hpp  PROTOCOL_BASE_GET_CHANNELLIST_REQ.cpp  PROTOCOL_BASE_GET_CHANNELLIST_REQ.hpp  PROTOCOL_BASE_GET_SYSTEM_INFO_REQ.cpp  PROTOCOL_BASE_GET_SYSTEM_INFO_REQ.hpp  PROTOCOL_BASE_GET_USER_INFO_REQ.cpp  PROTOCOL_BASE_GET_USER_INFO_REQ.hpp  PROTOCOL_BASE_LOGIN_REQ.cpp  PROTOCOL_BASE_LOGIN_REQ.hpp
PointBlank.Auth/Network/ServerPacket/: PROTOCOL_AUTH_GET_POINT_CASH_ACK.cpp  PROTOCOL_AUTH_GET_POINT_CASH_ACK.hpp  PROTOCOL_BASE_BOOSTEVENT_INFO_ACK.cpp  PROTOCOL_BASE_BOOSTEVENT_INFO_ACK.hpp  PROTOCOL_BASE_CHANNELTYPE_CONDITION_ACK.cpp  PROTOCOL_BASE_CHANNELTYPE_CONDITION_ACK.hpp  (+19 more)
PointBlank.Core/: CMakeLists.txt  ConfigFile.hpp  Core.cpp  Core.hpp  Logger.hpp
PointBlank.Core/Data/: MissionsInfo.cpp  MissionsInfo.hpp  RanksInfo.cpp  RanksInfo.hpp  ServersInfo.cpp  ServersInfo.hpp
PointBlank.Core/Database/: Database.cpp  Database.hpp
PointBlank.Core/Managers/: CharacterManager.cpp  CharacterManager.hpp  PlayerManager.cpp  PlayerManager.hpp  ShopManager.cpp  ShopManager.hpp  TitleManager.cpp  TitleManager.hpp
PointBlank.Core/Network/: BinaryReader.hpp  BinaryWriter.hpp  IDFactory.cpp  IDFactory.hpp  PacketInterface.hpp
PointBlank.Core/Protocol/: Acknowledge.hpp  Packet.hpp  Request.hpp
PointBlank.Core/Utilities/: Utils.cpp  Utils.hpp
(+32 files in other folders)
